# matplatex

./: .gitignore  LaTeXinput.py  README.md  env.yml  example.py  mpltex.py  pyproject.toml  tests.py
doc/: example.pdf_tex
docs/source/: api.rst  conf.py  index.rst  usage.rst
env/conda-meta/: anyio-3.7.1-pyhd8ed1ab_0.json  appnope-0.1.3-pyhd8ed1ab_0.json  argon2-cffi-21.3.0-pyhd8ed1ab_0.json  argon2-cffi-bindings-21.2.0-py311h5547dcb_3.json  arrow-1.2.3-pyhd8ed1ab_0.json  asttokens-2.2.1-pyhd8ed1ab_0.json  async-lru-2.0.4-pyhd8ed1ab_0.json  attrs-23.1.0-pyh71513ae_1.json  babel-2.12.1-pyhd8ed1ab_1.json  backcall-0.2.0-pyh9f0ad1d_0.json  backports-1.0-pyhd8ed1ab_3.json  backports.functools_lru_cache-1.6.5-pyhd8ed1ab_0.json  beartype-0.14.1-pyhd8ed1ab_0.json  beautifulsoup4-4.12.2-pyha770c72_0.json  bleach-6.0.0-pyhd8ed1ab_0.json  brotli-1.0.9-hb7f2c08_9.json  brotli-bin-1.0.9-hb7f2c08_9.json  brotli-python-1.0.9-py311h814d153_9.json  bzip2-1.0.8-h0d85af4_4.json  ca-certificates-2023.7.22-h8857fd0_0.json  cached-property-1.5.2-hd8ed1ab_1.json  cached_property-1.5.2-pyha770c72_1.json  certifi-2023.7.22-pyhd8ed1ab_0.json  cffi-1.15.1-py311ha86e640_3.json  charset-normalizer-3.2.0-pyhd8ed1ab_0.json  colorama-0.4.6-pyhd8ed1ab_0.json  comm-0.1.4-pyhd8ed1ab_0.json  contourpy-1.1.0-py311h5fe6e05_0.json  cycler-0.11.0-pyhd8ed1ab_0.json  debugpy-1.6.8-py311hdf8f085_0.json  decorator-5.1.1-pyhd8ed1ab_0.json  defusedxml-0.7.1-pyhd8ed1ab_0.json  entrypoints-0.4-pyhd8ed1ab_0.json  exceptiongroup-1.1.2-pyhd8ed1ab_0.json  executing-1.2.0-pyhd8ed1ab_0.json  flit-core-3.9.0-pyhd8ed1ab_0.json  fonttools-4.42.0-py311h2725bcf_0.json  fqdn-1.5.1-pyhd8ed1ab_0.json  freetype-2.12.1-h3f81eb7_1.json  history  (+142 more)
env/include/python3.11/: pyconfig.h
env/lib/: libbrotlicommon.1.0.9.dylib  libbrotlidec.1.0.9.dylib  libbrotlienc.1.0.9.dylib  libdeflate.0.dylib  libffi.8.dylib  libgcc_s.1.dylib  libjpeg.8.2.2.dylib  liblcms2.2.dylib  libncurses.6.dylib  libncursesw.6.dylib  libsharpyuv.0.dylib  libtcl8.6.dylib  libtiff.6.dylib  libtiffxx.6.dylib  libtinfo.6.dylib  libtinfow.6.dylib  libturbojpeg.0.2.0.dylib  libwebp.7.dylib  libwebpdecoder.3.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libzstd.1.5.2.dylib  tclConfig.sh  tkConfig.sh
env/lib/itcl4.2.2/: itclConfig.sh
src/matplatex/: LaTeXinput.py  __about__.py  __init__.py  journal_settings.py  latex_input.py  matplatex.py  settings.py  string_replacements.py  tests.py  tools.py  ui.py
tests/: test_extraction.py  test_latex_compilation.py  tests.py
(+235 files in other folders)
