[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matplatex"
dynamic = ["version"]
authors = [
	{ name="Johannes Sørby Heines", email="j.s.heines@pm.me" },
]
description = "A package to save matplotlib figures for easy inclusion in LaTeX."
readme = "README.md"
requires-python = ">3.8"
licence = "MIT"
classifiers = [
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"Topic :: Multimedia :: Graphics :: Graphics Conversion",
	"Topic :: Scientific/Engineering :: Visualization",
	"Topic :: Text Processing :: Markup :: LaTeX",
]
keywords = [
	"LaTeX",
	"pdf_tex",
	"matplotlib",
]
dependencies = [
	"matplotlib>=3.5",
	"beartype",
]

[tool.hatch.version]
path = "src/matplatex/__about__.py"

[tool.hatch.envs.test]
python = "3.8"
dependencies = [
	"pytest",
]


[tool.hatch.envs.test.scripts]
run = "pytest"
